@@ -3,7 +3,7 @@
 #  Copyright 2010 Dr D Studios Pty Limited (ACN 127 184 954) (Dr. D Studios),
 #  its affiliates and/or its licensors.
 #
-#  Copyright (c) 2010-2011, Image Engine Design Inc. All rights reserved.
+#  Copyright (c) 2010-2012, Image Engine Design Inc. All rights reserved.
 #
 #  Redistribution and use in source and binary forms, with or without
 #  modification, are permitted provided that the following conditions are
@@ -62,6 +62,7 @@ from ToHoudiniGroupConverter import *
 from RATDeepImageReaderTest import *
 from RATDeepImageWriterTest import *
 from DeepImageConverter import *
+from UpdateMode import *
 
 IECoreHoudini.TestProgram(
 	testRunner = unittest.TextTestRunner(
